versioned_docs/version-21.1/Files/UI/Enterprise-Manager/PERT-View-Flow-Diagram-Icons.md
# PERT View Flow Diagram Icons

In the diagram, each job is represented by a rectangle (also referred to
as a "job box") containing a colored bar indicating the job status, an
icon representing the job type, the job name, and/or icons representing
the special information about the job. For information on the Job Status
colors, refer to [Setting Preferences for Status Colors](Preferences-for-Status-Colors.md). For a description of
Job Statuses, please refer to [Job Statuses](../../../operations/status-descriptions.md#job-statuses)
 in the **Concepts** online help.

## Job Type Icons

The diagram may display any of the following job type icons:

|||
|---|---|
|![BIS Job icon](../../../Resources/Images/EM/jobicon_bis.png "BIS Job icon")|BIS|
|![OS 2200 Job icon](../../../Resources/Images/EM/jobicon_os2200.png "OS 2200 Job icon")|OS 2200|
  ![Container Job icon](../../../Resources/Images/EM/jobicon_container.png "Container Job icon")              Container       ![SAP BW Job icon](../../../Resources/Images/EM/jobicon_sapbw.png "SAP BW Job icon")            SAP BW
  ![File Transfer Job icon](../../../Resources/Images/EM/jobicon_filetransfer.png "File Transfer Job icon")   File Transfer   ![SAP Job icon](../../../Resources/Images/EM/jobicon_sap.png "SAP Job icon")                    SAP R/3 and CRM
  ![IBM i Job icon](../../../Resources/Images/EM/jobicon_iseries.png "IBM i Job icon")                        IBM i           ![SQL Job icon](../../../Resources/Images/EM/jobicon_sql.png "SQL Job icon")                    SQL
  ![Java Job icon](../../../Resources/Images/EM/jobicon_java.png "Java Job icon")                             Java            ![Tuxedo ART Job icon](../../../Resources/Images/EM/jobicon_tuxedo.png "Tuxedo ART Job icon")   Tuxedo ART
  ![MCP Job icon](../../../Resources/Images/EM/jobicon_mcp.png "MCP Job icon")                                MCP             ![UNIX Job icon](../../../Resources/Images/EM/jobicon_unix.png "UNIX Job icon")                 UNIX
  ![Null Job icon](../../../Resources/Images/EM/jobicon_null.png "Null Job icon")                             Null Job        ![Windows Job icon](../../../Resources/Images/EM/jobicon_windows.png "Windows Job icon")        Windows
  ![OpenVMS Job icon](../../../Resources/Images/EM/jobicon_openvms.png "OpenVMS Job icon")                    OpenVMS         ![z/OS Job icon](../../../Resources/Images/EM/jobicon_zOS.png "z/OS Job icon")                  z/OS
  ----------------------------------------------------------------------------------------------------------- --------------- ----------------------------------------------------------------------------------------------- -----------------

## Information Icons

The diagram may also display any of the following information icons:

  ------------------------------------------------------------------------------------------------------- --------------------------------------------------------
  ![Circular Dependency icon](../../../Resources/Images/EM/cir_dep.png "Circular Dependency icon")        The job has a circular dependency.
  ![Event icon](../../../Resources/Images/EM/event.png "Event icon")                                      The job has an event.
  ![Dependency icon](../../../Resources/Images/EM/dep_icon.png "Dependency icon")                         The job has a dependency on a job in another schedule.
  ![Dependency icon](../../../Resources/Images/EM/dep_icon2.png "Dependency icon")                        The job has a dependency on another schedule date
  ![Dependency icon](../../../Resources/Images/EM/dep_icon3.png "Dependency icon")                        A job required by this job is missing.
  ![Expression Dependency icon](../../../Resources/Images/EM/expr_dep.png "Expression Dependency icon")   A job has an expression dependency.
  ![Threshold Update icon](../../../Resources/Images/EM/EMinsertthreshold.png "Threshold Update icon")    A job has a threshold/ resource update.
  ------------------------------------------------------------------------------------------------------- --------------------------------------------------------
:::
